--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "KTU_Server",
   "version": "1.0.0",
   "dependencies": {
-    "express": "^5.0.0-alpha.8"
+    "ejs": "^3.1.6",
+    "express": "^5.0.0-alpha.8",
+    "mysql": "^2.18.1"
   }
 }
